feat(global): add images for waiting pages

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -8,8 +8,11 @@
       "ABOUT" : "A propos"
     }
   },
+  "BODY": {
+    "WAIT": "Page en cours de construction !"
+  },
   "HOME": {
-    "TITLE": "Accueil"
+    "TITLE": "Univers"
   },
   "ROLEPLAY": {
     "TITLE": "Jeu de rôles"
