--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,7 +5,8 @@
       "HOME": "Univers",
       "ROLEPLAY": "Jeu de rôles",
       "CHARACTERS": "Personnages",
-      "ABOUT" : "A Propos"
+      "ABOUT": "A Propos",
+      "LEGACY": "Mentions légales"
     }
   },
   "BODY": {
