feat(universe): prepare the hover on the map

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -10,15 +10,16 @@
     },
     "ROLEPLAY": "Jeu de rôles",
     "CHARACTERS": "Personnages",
-    "ABOUT": "A Propos",
-    "LEGACY": "Mentions légales"
+    "ABOUT": "A Propos"
   },
   "BODY": {
     "WAIT": "Page en cours de construction !"
   },
   "FOOTER": {
     "RESUME": "Le Monde d'Arlénor a été créé en Janvier 2015, et je ne sais pas quoi dire plus... Voici une autre phrase en attendant.",
-    "SEEMORE": "En savoir plus"
+    "SEEMORE": "En savoir plus",
+    "LEGACY": "Mentions légales",
+    "ABOUT": "A Propos"
   },
   "HOME": {
     "UNIVERSE": {
