--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -70,7 +70,26 @@
   },
   "UNIVERSE": {
     "TITLE": "Univers",
-    "SEEMORE": "En savoir plus"
+    "ARLENOR": {
+      "TITLE": "Le Monde d'Arlénor",
+      "DESCRIPTION": "Découvrez sur cette page, les principaux aspects du Monde d'Arlénor : sa religion, sa magie et ses peuples..."
+    },
+    "FARADEL": {
+      "TITLE": "L'Empire Faradelien",
+      "DESCRIPTION": "Cliquez sur la zone pour découvrir la cité des Elfes et des Humains, Faradel, ainsi que ses alentours..."
+    },
+    "JIRAKAN": {
+      "TITLE": "Le Régime Jirakanien",
+      "DESCRIPTION": "Cliquez sur la zone pour découvir la cité des esclaves, Jirakan, ainsi que ses alentours..."
+    },
+    "ZONES": {
+      "TITLE": "Les Zones Inexplorées",
+      "DESCRIPTION": "Cliquez sur l'une de ces zones pour essayer d'en découvrir leurs mystères..."
+    },
+    "CELESTIA": {
+      "TITLE": "L'Ile de Célestia",
+      "DESCRIPTION": "Cliquez sur l'île céleste pour découvrir... la vie ?"
+    }
   },
   "ROLEPLAY": {
     "TITLE": "Jeu de rôles"
