Style(universe): Prepare the new section for articles

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -88,7 +88,7 @@
     },
     "CELESTIA": {
       "TITLE": "L'Ile de Célestia",
-      "DESCRIPTION": "Cliquez sur l'île céleste pour découvrir... la vie ?"
+      "DESCRIPTION": "Cliquez sur l'île céleste pour découvrir... une recette de gâteau au chocolat, une nouvelle race de chatons, la vie ?"
     }
   },
   "ROLEPLAY": {
