Refactor(universe): Merge all the sections into one page

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -45,7 +45,11 @@
     },
     "UNIVERSE": {
       "TITLE": "L'Univers",
-      "DESCRIPTION": "L'Univers'"
+      "DESCRIPTION": "L'Univers"
+    },
+    "FARADEL": {
+      "TITLE": "L'Empire Faradelien",
+      "DESCRIPTION": "L'Empire Faradelien"
     },
     "FACT": {
       "TITLE": "L'Article",
