Feat(header): Add a section with animation

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,6 +3,7 @@
     "HOME": "Le Monde d'Arlénor",
     "UNIVERSE": {
       "MAIN": "Univers",
+      "SECTION00": "Monde",
       "SECTION01": "Empire Faradélien",
       "SECTION02": "Régime Jirakanien",
       "SECTION03": "Célestia",
