Fix(footer): Fix the footer on the bottom page

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -24,9 +24,9 @@
   },
   "HOME": {
     "UNIVERSE": {
-      "TITLE": "L'Univers du Monde d'Arlénor",
+      "TITLE": "L'Univers",
       "RESUME": "Découvrez l'univers du Monde d'Arlénor, la religion domninante, la magie omni-présente, les différents peuples y vivant et les conflits y règnant...",
-      "SEEMORE": "En lire davantage"
+      "SEEMORE": "Découvrir"
     },
     "ROLEPLAY": {
       "TITLE": "Le Jeu de rôle",
