Fix(universe): Change the display of the map and the selection

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -73,6 +73,7 @@
     }
   },
   "UNIVERSE": {
+		"POINTS": "Point d'Intérêt",
     "TITLE": "Univers",
     "ARLENOR": {
       "TITLE": "Le Monde d'Arlénor",
