Feat(universe): Add two sections for celestia

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,7 +6,9 @@
       "SECTION00": "Le Monde",
       "SECTION01": "La Religion",
       "SECTION02": "La Magie des cristaux",
-      "SECTION03": "Les Peuples"
+      "SECTION03": "Les Peuples",
+      "SECTION04": "L'île Célestia",
+      "SECTION05": "Le Cercle des mages"
     },
     "ROLEPLAY": "Jeu de rôles",
     "CHARACTERS": "Personnages",
