Refactor(religion): Prepare the blocks

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -49,9 +49,9 @@
       "TITLE": "L'Univers",
       "DESCRIPTION": "L'Univers"
     },
-    "FARADEL": {
-      "TITLE": "L'Empire Faradelien",
-      "DESCRIPTION": "L'Empire Faradelien"
+    "RELIGION": {
+      "TITLE": "La Religion",
+      "DESCRIPTION": "La Religion"
     },
     "FACT": {
       "TITLE": "L'Article",
