Refactor(global): Disable temporary the access to roleplay, character and celestia sections

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -69,13 +69,13 @@
     },
     "ROLEPLAY": {
       "TITLE": "Le Jeu de rôle",
-      "RESUME": "Découvrez l'univers du Monde d'Arlénor, la religion domninante, la magie omni-présente, les différents peuples y vivant et les conflits y règnant...",
-      "SEEMORE": "Oser l'aventure"
+      "RESUME": "Vivez l'aventure de jeunes personnes, découvrant la notion du Destin et de l'effet papillon...",
+      "SEEMORE": "Momentanément indisponible"
     },
     "CHARACTERS": {
       "TITLE": "Les Personnages",
       "RESUME": "Chaque personnage a une histoire. Découvrez celles de Romain, Elisa, Jérémy... et de tous les autres, sur l'île de Célestia.",
-      "SEEMORE": "Vivre leur passé"
+      "SEEMORE": "Momentanément indisponible"
     }
   },
   "UNIVERSE": {
