--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -56,9 +56,6 @@
       "DESCRIPTION": "Mentions Légales"
     }
   },
-  "BODY": {
-    "WAIT": "Page en cours de construction !"
-  },
   "FOOTER": {
     "RESUME": "Le Monde d'Arlénor a été créé en Janvier 2015, et je ne sais pas quoi dire plus... Voici une autre phrase en attendant.",
     "SEEMORE": "En savoir plus",
@@ -291,7 +288,18 @@
     "TITLE": "Personnages"
   },
   "ABOUT": {
-    "TITLE": "A Propos"
+		"TITLE": "A Propos",
+		"INTRODUCTION": "Présentation",
+		"INTRODUCTIONTEXT": "Je suis Spefire, j'ai 24ans et je suis un ingénieur en informatique ayant une passion pour le dessin (ironique hein ?). Je m'entraine sérieusement depuis 2015 en jongleant avec les fanarts, les jeux vidéo et le jeu de rôles.",
+		"CONTACT": "Contact / Questions",
+		"CONTACTTEXT": "Vous pouvez me contacter sur ",
+		"PROJECTS": "Projets",
+		"PROJECTSTEXT": {
+			"PROJECT01": "Le Monde d'Arlénor",
+			"PROJECT01TEXT": "Ce projet est né avec ma découverte du jeu de rôles en 2014. J'avais envie de contrôler le monde dans lequel vivrait mes joueurs et créer mes propres scénarios très rapidement. En janvier 2015, le Monde d'Arlénor est né. Mes premiers joueurs ont vécu une première campagne de 8 scénarios. Seulement, je souhaitais partager cet univers au delà du jeu de rôles... d'où ce site !",
+			"PROJECT02": "Célestia et le cercle des mages Evanell",
+			"PROJECT02TEXT": "Célestia est une sorte d'extension du Monde d'Arlénor : une partie encore inexplorée par les joueurs. Je l'ai créé pour y faire vivre mes OCs (mes propres personnages) et partager leurs histoires."
+		}
   },
   "LEGACY": {
     "TITLE": "Mentions Légales",
