Feat : Add texts for faradel and jirakan facts (need one more)

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -304,7 +304,7 @@
   "LEGACY": {
     "TITLE": "Mentions Légales",
     "STATUT": "Statut du propriétaire : <strong>Particulier</strong>",
-    "HOST": "<strong>Hébergeur OVH<br/>2 rue Kellermann<br/>59100 ROUBAIX – France</strong>",
+    "HOST": "<strong>Hébergeur OVH<br>2 rue Kellermann<br>59100 ROUBAIX – France</strong>",
     "CONTACT": "Pour contacter cet hébergeur, rendez-vous à l’adresse suivante :"
   }
 }
