--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -71,12 +71,12 @@
     "ROLEPLAY": {
       "TITLE": "Le Jeu de rôle",
       "RESUME": "Vivez l'aventure de jeunes personnes, découvrant la notion du Destin et de l'effet papillon...",
-      "SEEMORE": "Momentanément indisponible"
+      "SEEMORE": "Prochainement disponible"
     },
     "CHARACTERS": {
       "TITLE": "Les Personnages",
       "RESUME": "Chaque personnage a une histoire. Découvrez celles de Romain, Elisa, Jérémy... et de tous les autres, sur l'île de Célestia.",
-      "SEEMORE": "Momentanément indisponible"
+      "SEEMORE": "Prochainement disponible"
     }
   },
   "UNIVERSE": {
@@ -298,7 +298,7 @@
 			"PROJECT01": "Le Monde d'Arlénor",
 			"PROJECT01TEXT": "Ce projet est né avec ma découverte du jeu de rôles en 2014. J'avais envie de contrôler le monde dans lequel vivrait mes joueurs et créer mes propres scénarios très rapidement. En janvier 2015, le Monde d'Arlénor est né. Mes premiers joueurs ont vécu une première campagne de 8 scénarios. Seulement, je souhaitais partager cet univers au delà du jeu de rôles... d'où ce site !",
 			"PROJECT02": "Célestia et le cercle des mages Evanell",
-			"PROJECT02TEXT": "Célestia est une sorte d'extension du Monde d'Arlénor : une partie encore inexplorée par les joueurs. Je l'ai créé pour y faire vivre mes OCs (mes propres personnages) et partager leurs histoires."
+			"PROJECT02TEXT": "Célestia est une sorte d'extension du Monde d'Arlénor : une île céleste encore inexplorée par les joueurs. Je l'ai créé pour y faire vivre mes OCs (mes propres personnages) et partager leurs histoires."
 		}
   },
   "LEGACY": {
