--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -16,44 +16,67 @@
 	},
   "PAGE": {
     "HOME": {
-      "TITLE": "Le Monde d'Arlénor",
-      "DESCRIPTION": "Le Monde d'Arlénor"
+			"TITLE": "Le Monde d'Arlénor",
+			"META": {
+				"DESCRIPTION": "Univers, créé principalement pour le jeu de rôles, mais où sont racontées les histoires de...",
+				"URL": "www.arlenor.com"
+			}
     },
     "UNIVERSE": {
       "TITLE": "L'Univers",
-      "DESCRIPTION": "L'Univers"
+      "META": {
+				"DESCRIPTION": "Découvrez l'univers du Monde d'Arlénor, la religion domninante, la magie omni-présente, les différents peuples y vivant et les conflits y règnant...",
+				"URL": "www.arlenor.com/universe"
+			}
     },
     "RELIGION": {
       "TITLE": "La Religion",
-      "DESCRIPTION": "La Religion"
+      "META": {
+				"DESCRIPTION": "Selon la légende connue par tous, la divinité de la Vie et de la Mort, Arlénor, a façonné le...",
+				"URL": "www.arlenor.com/universe/religion"
+			}
 		},
 		"CRYSTALS": {
       "TITLE": "La Magie des Cristaux",
-      "DESCRIPTION": "La Magie des Cristaux"
+      "META": {
+				"DESCRIPTION": "La magie du Monde d'Arlénor provient des cristaux laissés par les...",
+				"URL": "www.arlenor.com/universe/crystals"
+			}
     },
 		"POPULATION": {
       "TITLE": "Les Peuples",
-      "DESCRIPTION": "Les Peuples"
-    },
-    "FACT": {
-      "TITLE": "L'Article",
-      "DESCRIPTION": "L'Article"
+      "META": {
+				"DESCRIPTION": "Le premier peuple à être apparu sur le Monde d'Arlénor, est le peuple des...",
+				"URL": "www.arlenor.com/universe/population"
+			}
     },
     "ROLEPLAY": {
       "TITLE": "Le Jeu de rôle",
-      "DESCRIPTION": "Le Jeu de rôle"
+      "META": {
+				"DESCRIPTION": "Vivez l'aventure de jeunes personnes, découvrant la notion du Destin et de l'effet papillon...",
+				"URL": "www.arlenor.com/roleplay"
+			}
     },
     "CHARACTERS": {
       "TITLE": "Les Personnages",
-      "DESCRIPTION": "Les Personnages"
+      "META": {
+				"DESCRIPTION": "Chaque personnage a une histoire. Découvrez celles de Romain, Elisa, Jérémy...",
+				"URL": "www.arlenor.com/characters"
+			}
     },
     "ABOUT": {
       "TITLE": "A Propos",
-      "DESCRIPTION": "A Propos"
+      "META": {
+				"DESCRIPTION": "Ce projet est né avec ma découverte du jeu de rôles en 2014. J'avais envie de contrôler le monde dans lequel vivrait mes joueurs et créer mes propres...",
+				"URL": "www.arlenor.com/about"
+			}
     },
     "LEGACY": {
       "TITLE": "Mentions Légales",
-      "DESCRIPTION": "Mentions Légales"
+      "META": {
+				"DESCRIPTION": "",
+				"URL": "www.arlenor.com/legacy"
+			}
     }
   },
   "FOOTER": {
@@ -290,7 +313,7 @@
   "ABOUT": {
 		"TITLE": "A Propos",
 		"INTRODUCTION": "Présentation",
-		"INTRODUCTIONTEXT": "Je suis Spefire, j'ai 24ans et je suis un ingénieur en informatique ayant une passion pour le dessin (ironique hein ?). Je m'entraine sérieusement depuis 2015 en jongleant avec les fanarts, les jeux vidéo et le jeu de rôles.",
+		"INTRODUCTIONTEXT": "Je suis Spefire, j'ai 24 ans et je suis un ingénieur en informatique ayant une passion pour le dessin (ironique hein ?). Je m'entraine sérieusement depuis 2015 en jongleant avec les fanarts, les jeux vidéo et le jeu de rôles.",
 		"CONTACT": "Contact / Questions",
 		"CONTACTTEXT": "Vous pouvez me contacter sur ",
 		"PROJECTS": "Projets",
