--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -233,6 +233,25 @@
 			}
 		}
 	},
+	"ROLEPLAY": {
+    "UNIVERSE": {
+			"TITLE": "La carte du monde et ses habitants",
+      "RESUME": "Avant de créer son personnage, ou même de lire les règles du jeu de rôles... découvrez l'univers du Monde d'Arlénor : la religion domninante, la magie omni-présente, les différents peuples y vivant et les conflits y règnant...",
+      "SEEMORE": "Voir le monde"
+    },
+    "PERSO": {
+			"TITLE": "La création de personnage",
+      "RESUME": "Créez ici votre personnage, des caractéristiques aux compétences, en passant par leurs pouvoirs... Pour ensuite télécharger la fiche de personnage en PDF.",
+      "SEEMORE": "Prochainement disponible"
+    },
+    "FILES": {
+			"TITLE": "Les règles du jeu",
+      "RESUME01": "Trouvez ici tous les éléments permettant de comprendre la création de personnage en profondeur ainsi que le système de jeu avec les dés.",
+			"SEEMORE01": "Télécharger le Manuel du Joueur",
+			"RESUME02": "Pour les Maitres du Jeu seulement :",
+			"SEEMORE02": "Télécharger le Manuel du MJ"
+    }
+  },
   "ABOUT": {
 		"INTRODUCTION": "Présentation",
 		"INTRODUCTIONTEXT": "Je suis Spefire, j'ai 24 ans et je suis un ingénieur en informatique ayant une passion pour le dessin (ironique hein ?). Je m'entraine sérieusement depuis 2015 en jongleant avec les fanarts, les jeux vidéo et le jeu de rôles.",
