Refactor : Add background on roleplay page and links

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -247,9 +247,9 @@
     "FILES": {
 			"TITLE": "Les règles du jeu",
       "RESUME01": "Trouvez ici tous les éléments permettant de comprendre la création de personnage en profondeur ainsi que le système de jeu avec les dés.",
-			"SEEMORE01": "Télécharger le Manuel du Joueur",
+			"SEEMORE01": "Télécharger le Manuel du Joueur V1.0",
 			"RESUME02": "Pour les Maitres du Jeu seulement :",
-			"SEEMORE02": "Télécharger le Manuel du MJ"
+			"SEEMORE02": "Télécharger le Manuel du MJ V1.0"
     }
   },
   "ABOUT": {
